--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vitejs/plugin-react": "^1.3.0",
     "eslint": "^8.14.0",
     "eslint-plugin-react": "^7.29.4",
+    "sass": "^1.51.0",
     "vite": "^2.9.5"
   }
 }
